--- a/.github/workflows/remote-uccl-build.yml
+++ b/.github/workflows/remote-uccl-build.yml
@@ -45,7 +45,7 @@ jobs:
         shell: bash
         run: |
           set -euo pipefail
-          git submodule update --init thirdparty/nccl
+          git submodule update --init --recursive thirdparty/nccl
           rsync -az --delete \
             -e "ssh -o BatchMode=yes" \
             ./gpu_driven ./rdma ./p2p \
