--- a/.github/workflows/remote-uccl-build.yml
+++ b/.github/workflows/remote-uccl-build.yml
@@ -70,7 +70,7 @@ jobs:
             conda info --envs | awk \x27{print \$1}\x27 | grep -qx uccl || conda create -y -n uccl python=3.11
             conda activate uccl
 
-            cd /home/skytestuser/uccl
+            cd /home/skytestuser/uccl-test
             ./build_and_install.sh cuda all 3.11 2>&1 | tee build.log
 
             grep -q \"Successfully installed uccl-0.0.1.post4\" build.log
