removing redis from p2p, restructure function order and name in engine.h/cc

--- a/p2p/Makefile
+++ b/p2p/Makefile
@@ -23,12 +23,7 @@ PREFIX ?= /usr/local
 LIBDIR ?= $(PREFIX)/lib
 INCDIR ?= $(PREFIX)/include
 
-# Redis
-REDIS_PKGCONFIG := pkg-config
-REDIS_CFLAGS    := $(shell $(REDIS_PKGCONFIG) --cflags hiredis redis++)
-REDIS_LIBS      := $(shell $(REDIS_PKGCONFIG) --libs hiredis redis++)
-CXXFLAGS       += $(REDIS_CFLAGS)
-LDFLAGS         = -L$(CUDA_LIB) -lcudart -lcuda $(REDIS_LIBS) \
+LDFLAGS         = -L$(CUDA_LIB) -lcudart -lcuda \
                   -Wl,-rpath,$(CUDA_LIB) -lglog -lgflags -lgtest \
                   -lz -lelf -libverbs -lpthread
 
