--- a/docker/Dockerfile.rocm
+++ b/docker/Dockerfile.rocm
@@ -13,7 +13,7 @@ RUN apt-get update && \
         rdma-core libibverbs-dev \
         libgoogle-glog-dev libgflags-dev libgtest-dev libelf-dev \
         libnuma-dev libdrm-dev libdrm-amdgpu1 \
-        pkg-config libhiredis-dev zlib1g-dev curl \
+        pkg-config zlib1g-dev curl \
         software-properties-common && \
 \
 # ───── Add Python ${PY_VER} PPA & install Python ${PY_VER} + setuptools ─────
@@ -38,11 +38,6 @@ RUN python${PY_VER} -m pip install --no-cache-dir build auditwheel pybind11
 # ───── Set Python ${PY_VER} as default python3 and python3-config ─────
 RUN ln -sf /usr/bin/python${PY_VER} /usr/local/bin/python3 && \
     ln -sf /usr/bin/python${PY_VER}-config /usr/local/bin/python3-config
-
-RUN git clone --depth 1 https://github.com/sewenew/redis-plus-plus.git /tmp/redis-plus-plus && \
-    cd /tmp/redis-plus-plus && mkdir build && cd build && \
-    cmake .. && make -j && make install && \
-    rm -rf /tmp/redis-plus-plus
     
 WORKDIR /io
 
