--- a/docker/Dockerfile.efa
+++ b/docker/Dockerfile.efa
@@ -1,4 +1,5 @@
-FROM nvidia/cuda:12.3.2-devel-ubuntu22.04
+ARG BASE_IMAGE=nvidia/cuda:12.3.2-devel-ubuntu22.04
+FROM ${BASE_IMAGE}
 ARG PY_VER=3.13
 
 # Non-interactive APT
