--- a/p2p/MakefileHip
+++ b/p2p/MakefileHip
@@ -5,8 +5,9 @@ HIP_HOME?=/opt/rocm
 HIP_INC  := $(HIP_HOME)/include
 HIP_LIB  := $(HIP_HOME)/lib
 CONDA_LIB_HOME?=/usr/lib
+RDMA_HOME := ../collective/rdma
 CXX := g++
-CXXFLAGS := -O3 -shared -std=c++17 -fPIC -I../include -I../rdma -I$(HIP_INC) \
+CXXFLAGS := -O3 -shared -std=c++17 -fPIC -I../include -I$(RDMA_HOME) -I$(HIP_INC) \
 	-Wno-pointer-arith -Wno-sign-compare -Wno-unused-variable \
 	-Wl,-rpath=/usr/lib/x86_64-linux-gnu -Wl,-rpath=${CONDA_LIB_HOME} -I${CONDA_LIB_HOME}/../include -L${CONDA_LIB_HOME} -lglog -lgflags -lgtest -lz -lelf -libverbs -lpthread
 
@@ -35,15 +36,15 @@ OBJECTS := $(SOURCES:.cc=.o)
 all: $(TARGET)
 
 # Build the shared library
-$(TARGET): $(OBJECTS) ../rdma/librdma_hip.a
-	$(CXX) $(OBJECTS) ../rdma/librdma_hip.a \
+$(TARGET): $(OBJECTS) $(RDMA_HOME)/librdma_hip.a
+	$(CXX) $(OBJECTS) $(RDMA_HOME)/librdma_hip.a \
 	      -L$(HIP_LIB) -lamdhip64 \
 	      -o $@ $(LDFLAGS) $(PYTHON_LDFLAGS) $(CXXFLAGS) \
 	      -Wl,-rpath,$(HIP_LIB)
 
 
-../rdma/librdma_hip.a: ../rdma/*.cc ../rdma/*.h
-	make -C ../rdma -f MakefileHip -j$(nproc)
+$(RDMA_HOME)/librdma_hip.a: $(RDMA_HOME)/*.cc $(RDMA_HOME)/*.h
+	make -C $(RDMA_HOME) -f MakefileHip -j$(nproc)
 
 # Compile source files
 %.o: %.cc
@@ -58,7 +59,7 @@ install: $(TARGET)
 # Clean build artifacts
 clean:
 	rm -f $(OBJECTS) $(TARGET)
-	make -C ../rdma -f MakefileHip clean -j$(nproc)
+	make -C $(RDMA_HOME) -f MakefileHip clean -j$(nproc)
 
 # Test the module
 test: $(TARGET)
