--- a/.github/workflows/clang-format-check.yml
+++ b/.github/workflows/clang-format-check.yml
@@ -29,9 +29,9 @@ jobs:
       run: |
         set -e
 
-        DIRECTORIES=("afxdp" "efa" "ep" "rdma" "misc" "p2p" "include")
+        DIRECTORIES=("collective" "ep" "misc" "p2p" "include")
         EXTENSIONS=("cpp" "cxx" "cc" "h" "hpp" "cu" "cuh")
-        EXCLUDE=("afxdp/lib")
+        EXCLUDE=("collective/afxdp/lib")
 
         EXCLUDE_ARGS=()
         for EXC in "${EXCLUDE[@]}"; do
