update git module name

--- a/.gitmodules
+++ b/.gitmodules
@@ -1,7 +1,7 @@
-[submodule "afxdp/lib/libbpf"]
+[submodule "collective/afxdp/lib/libbpf"]
 	path = collective/afxdp/lib/libbpf
 	url = https://github.com/libbpf/libbpf
-[submodule "afxdp/lib/xdp-tools"]
+[submodule "collective/afxdp/lib/xdp-tools"]
 	path = collective/afxdp/lib/xdp-tools
 	url = https://github.com/xdp-project/xdp-tools
 [submodule "thirdparty/rccl"]
