--- a/.github/workflows/remote-uccl-build.yml
+++ b/.github/workflows/remote-uccl-build.yml
@@ -4,13 +4,10 @@ on:
   push:
     branches:
       - main
-  pull_request:
-    branches:
-      - main
 
 concurrency:
   group: remote-uccl-build
-  cancel-in-progress: true
+  cancel-in-progress: false
 
 jobs:
   build-on-gpu-host:
